# MMQ

./: CMakeLists.txt  CancelToken.cpp  CancelToken.h  Delegete.cpp  Delegete.h  MemoryMQ.sln  MemoryMQ.vcxproj  MemoryMQ.vcxproj.filters  MemoryMessage.cpp  MemoryMessage.h  MessageQueue.cpp  MessageQueue.h  MessageTranslater.cpp  MessageTranslater.h  README.md  ReadMe.txt  stdafx.cpp  stdafx.h
Debug/: MMQTest.ilk  MQTest_Subcribler.ilk  MemoryMQ.exp  MemoryMQ.ilk  MemoryMQ.lib  vc140.idb
Debug/MemoryMQ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MemoryMQ.lastbuildstate  MemoryMQ.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MMQTest/: MMQTest.cpp  MMQTest.vcxproj  MMQTest.vcxproj.filters  ReadMe.txt  _mq_mem_  stdafx.cpp
MMQTest/Debug/: MMQTest.pch  MemoryMQ.lib  vc140.idb
MMQTest/Debug/MMQTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MMQTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MQTest_Subcribler/: MQTest_Subcribler.cpp  MQTest_Subcribler.vcxproj  MQTest_Subcribler.vcxproj.filters  ReadMe.txt  stdafx.cpp
MQTest_Subcribler/Debug/: MQTest_Subcribler.pch  vc140.idb
MQTest_Subcribler/Debug/MQTest_S.B37D6320.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ipch/MMQTEST-776f5886/: MMQTEST-e7e4d197.ipch
ipch/MMQTEST-dd873542/: MMQTEST-e7e4d197.ipch
ipch/MQTEST_SUBCRIBLER-44cca584/: MQTEST_SUBCRIBLER-14fac096.ipch
